Contact information added.

--- a/readme.org
+++ b/readme.org
@@ -1,1 +1,5 @@
 * About
+Babel is a language learning game in development. It's source code
+is released under the GPL. 
+You can contact the author by email at babel at w3-net.de or through 
+the page social.w3-net.de.
