[feature] Submodule information added to the readme.

--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,11 @@
 * About
 Babel is a language learning game in development. It's source code
 is released under the GPL. 
-You can contact the author by email at babel at w3-net.de or through 
-the page social.w3-net.de.
+You can contact the author by email at babel at w3-net.de.
+
+* Additional Information
+In order to pull the submodules you have to enter:
+- git submodule init
+
+And then update the submodules with:
+- git submodule update --recursive
